# LibODESolve

./: CMakeLists.txt  README.md
include/: GeodesicSphere.h  IntTrapezoid.h  ODESolveBase.h  ODESolveRK.h  ODESolveRX.h  OrbitKepler.h  PythonHook.h  WrapGeoIATA.h  nrutil.h
src/: GeoFigure.py  GeoIATA.py  GeodesicSphere.cpp  IntTrapezoid.cpp  ODESolveBase.cpp  ODESolveRK.cpp  ODESolveRX.cpp  OrbitKepler.cpp  PythonHook.cpp  WrapGeoIATA.cpp  main_proj_geodesic.cpp  main_proj_kepler.cpp  nrutil.c  test_IntTrapezoid_pi.cpp  test_ODERK_cos.cpp  test_ODERX_cos.cpp
test/: test_IntTrapezoid_pi.cpp  test_ODERK_cos.cpp
